Resolves HELIO-1877 Institutional's Shibboleth EntityId And Embedded Directory Service

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
  *= require jquery-ui/datepicker
  *= require cozy-sun-bear-main
+ *= require idpselect
  * rails new <app> defaults...
  * require_tree .
  * require_self
