--- a/app/views/institutions/_form.html.erb
+++ b/app/views/institutions/_form.html.erb
@@ -4,6 +4,7 @@
   <div class="form-inputs">
     <%= f.input :identifier %>
     <%= f.input :name %>
+    <%= f.input :entity_id %>
     <%= f.input :site %>
     <%= f.input :login %>
   </div>
