--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -6,6 +6,10 @@
   </div>
 
   <div class="form-inputs">
+    <%= f.input :name %>
+  </div>
+
+  <div class="form-inputs">
     <%= f.input :purchase %>
   </div>
 
