--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,6 +4,8 @@
     <div class="col-md-12"><h1>Product</h1></div>
     <div class="col-md-1"><em>Identifier</em></div>
     <div class="col-md-11"><%= @product.identifier %></div>
+    <div class="col-md-1"><em>Name</em></div>
+    <div class="col-md-11"><%= @product.name %></div>
     <div class="col-md-1"><em>Purchase</em></div>
     <div class="col-md-11"><%= @product.purchase %></div>
     <div class="col-md-12"><h2>Components</h2></div>
