Resolves HELIO-1845 Unable to logout in production

--- a/fulcrum/_includes/footer.html
+++ b/fulcrum/_includes/footer.html
@@ -13,7 +13,7 @@
             <li><a class="white-text" href="/blog/">Blog</a></li>
             <li><a class="white-text" href="mailto:{{ site.email }}">Contact</a></li>
             <li><a class="white-text" href="https://github.com/{{ site.github_username }}">Contribute</a></li>
-            <li><a id="sign-in" class="white-text"></a></li>
+            <li><a id="sign-in" class="white-text" rel="nofollow"></a></li>
           </ul>
         </div>
         <div class="col l1 s12 offset-l1 footer-menu">
