Resolves HELIO-1911: doi, identifier, identifiers

--- a/app/views/hyrax/base/_form_metadata.html.erb
+++ b/app/views/hyrax/base/_form_metadata.html.erb
@@ -87,6 +87,7 @@
 <div id="citable-links-metadata" class='collapse'>
   <p><%= t('simple_form.labels.monograph.citable_links_metadata.help_html') %></p>
   <%= f.input :doi %>
+  <%= f.input :hdl %>
   <%= f.input :identifier, as: :multi_value %>
 </div>
 
