--- a/app/views/hyrax/monographs/_attribute_rows.html.erb
+++ b/app/views/hyrax/monographs/_attribute_rows.html.erb
@@ -15,4 +15,5 @@
 <%= presenter.attribute_to_html(:isbn, label: t('isbn')) %>
 
 <%= presenter.attribute_to_html(:doi) %>
+<%= presenter.attribute_to_html(:hdl) %>
 <%= presenter.attribute_to_html(:identifier) %>
