--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -4,14 +4,12 @@
 <% @monograph_presenter.epub_presenter.chapters.each do |chapter| %>
   <div class="row chapter">
     <div class="col-sm-12">
-      <h3>
-        <% if chapter.downloadable? %>
-        <a href="<%= epub_download_chapter_path(id: @monograph_presenter.epub_id, cfi: chapter.cfi) %>" data-turbolinks="false">
-          <i id="download" class="oi" data-glyph="data-transfer-download" title="Download chapter" aria-hidden="true"></i>
-        </a>
-        <% end %>
-        <a href="<%= epub_url %>#<%= chapter.cfi %>4/1:0"><%= chapter.title %></a>
-      </h3>
+      <h3><a href="<%= epub_url %>#<%= chapter.cfi %>4/1:0"><%= chapter.title %></a></h3>
+      <% if chapter.downloadable? %>
+      <span class="download"><a class="btn btn-default btn-sm" href="<%= epub_download_chapter_path(id: @monograph_presenter.epub_id, cfi: chapter.cfi) %>" data-turbolinks="false">
+        <i id="download" class="oi" data-glyph="data-transfer-download" title="Download chapter" aria-hidden="true"></i>
+      Download</a></span>
+      <% end %>
       <hr>
     </div>
   </div>
