add new fields to the presses database; modify views to incorporate display of new fields; add spec check for footer links

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -137,6 +137,16 @@ footer.press {
 
   }
 
+  p.publisher-info {
+    font-size: .9em !important;
+    padding-top: .5em;
+
+    span.twitter:nth-child(2)::before {
+      content: " | ";
+    }
+
+  }
+
 }
 .press {
 
