--- a/app/views/shared/_brand_press_footer_block_b.html.erb
+++ b/app/views/shared/_brand_press_footer_block_b.html.erb
@@ -1,4 +1,7 @@
 <div class="col-sm-4 press-block-b col">
+  <% if footer_block_b(press_subdomain).present? %>
+    <%= footer_block_b(press_subdomain).html_safe %> 
+  <% else %>
   <!-- <ul class="list-unstyled">
     <li><a href="#">Home</a></li>
     <li><a href="#">Search</a></li>
@@ -6,4 +9,5 @@
     <li><a href="#">Browse All Book Materials</a></li>
     <li><a href="#">About</a></li>
   </ul> -->
+  <% end %>
 </div>
