--- a/app/views/hyrax/file_sets/media_display/_external_resource.erb
+++ b/app/views/hyrax/file_sets/media_display/_external_resource.erb
@@ -1,3 +1,3 @@
 <p class="external-text lead">This is an external resource hosted on another website.<br />
-  <a href="<%= file_set.ext_url_doi_or_handle %>" title="<%= file_set.title %>" target="_blank" ><span class="glyphicon glyphicon-share" aria-hidden="true"></span> View object</a> at originating website.
+  <a href="<%= file_set.external_resource_url %>" title="<%= file_set.title %>" target="_blank" ><span class="glyphicon glyphicon-share" aria-hidden="true"></span> View object</a> at originating website.
 </p>
