--- a/app/views/monograph_catalog/_thumbnail_list_file_set.html.erb
+++ b/app/views/monograph_catalog/_thumbnail_list_file_set.html.erb
@@ -3,8 +3,8 @@
 <div class="document-thumbnail col-sm-3">
   <% if fs_presenter.use_glyphicon? %>
     <%= tn.gsub(/<img.*>/, fs_presenter.gylphicon + "<br/></a>".html_safe).html_safe %>
-    <% if document.external_resource == 'yes' %>
-      <a class="external-resource-link" href="<%= document.ext_url_doi_or_handle %>" target="_blank"><span class="glyphicon glyphicon-share" aria-hidden="true"></span> View External Object</a>
+    <% if fs_presenter.external_resource? %>
+      <a class="external-resource-link" href="<%= document.external_resource_url %>" target="_blank"><span class="glyphicon glyphicon-share" aria-hidden="true"></span> View External Object</a>
     <% end %>
   <% else %>
     <%= tn %>
