--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -5,7 +5,7 @@
   <% end %>
   <div class="col-sm-3 monograph-cover">
     <img class="img-responsive" src="/image-service/<%= @monograph_presenter.representative_id %>/full/225,/0/default.jpg"
-         alt="<%= @monograph_presenter.representative_alt_text %>">
+         alt="Cover for <%= @monograph_presenter.representative_alt_text %>">
     <% if can? :edit, @monograph_presenter %>
       <a class="btn btn-default manage-monograph-button" href="<%= main_app.monograph_show_path(@monograph_presenter.id) %>" title="<%= t('monograph_catalog.index.show_page_button') %>" data-turbolinks="false"><%= t('monograph_catalog.index.show_page_button') %></a>
       <a class="btn btn-default manage-monograph-button" href="<%= main_app.edit_hyrax_monograph_path(@monograph_presenter.id) %>" title="<%= t('monograph_catalog.index.edit_page_button') %>" data-turbolinks="false"><%= t('monograph_catalog.index.edit_page_button') %></a>
@@ -14,9 +14,9 @@
     <% end %>
   </div><!-- /.monograph-cover -->
   <div class="col-sm-9 monograph-metadata">
-    <h2><%= @monograph_presenter.title %></h2>
+    <h1><%= @monograph_presenter.title %></h1>
     <% if @monograph_presenter.authors? %>
-        <h3><%= render_markdown @monograph_presenter.authors %></h3>
+        <span class="authors"><%= render_markdown @monograph_presenter.authors %></span>
     <% end %>
     <% if @monograph_presenter.date_created? %>
     <span aria-label="publication date" class="pubdate"><%= @monograph_presenter.date_created.first %></span>
