--- a/app/views/shared/_brand_press_jumbotron.html.erb
+++ b/app/views/shared/_brand_press_jumbotron.html.erb
@@ -1,5 +1,6 @@
 <!-- Main jumbotron for a primary heading image -->
     <div class="jumbotron">
+      <h1 class="sr-only"><%= @press.name %></h1>
       <div class="container">
         <% if @press.logo_path && !@press.new_record? %>
           <div class="logo pull-left">
