press catalog sort

--- a/app/views/press_catalog/index.html.erb
+++ b/app/views/press_catalog/index.html.erb
@@ -6,6 +6,6 @@
     <%= render 'catalog/search_sidebar' %>
   </div>
   <div class="col-sm-9">
-    <%= render 'press_catalog/press_results' %>
+    <%= render 'catalog/search_results' %>
   </div>
 </div>
