--- a/app/views/catalog/_view_type_group.html.erb
+++ b/app/views/catalog/_view_type_group.html.erb
@@ -1,13 +1,15 @@
-<% if show_sort_and_per_page? and has_alternative_views? -%>
-<div class="view-type btn-group">
-  <span class="sr-only"><%= t('blacklight.search.view_title') %></span>
-  <div class="view-type-group btn-group">
-    <%  document_index_views.each do |view, config| %>
-      <%= link_to url_for(search_state.to_h.merge(view: view)), title: view_label(view), class: "btn btn-default view-type-#{ view.to_s.parameterize } #{"active" if document_index_view_type == view}" do %>
-        <%= render_view_type_group_icon view %>
-        <span class="caption"><%= view_label(view) %></span>
+<% unless controller_name == 'press_catalog' %>
+  <% if show_sort_and_per_page? and has_alternative_views? -%>
+  <div class="view-type btn-group">
+    <span class="sr-only"><%= t('blacklight.search.view_title') %></span>
+    <div class="view-type-group btn-group">
+      <%  document_index_views.each do |view, config| %>
+        <%= link_to url_for(search_state.to_h.merge(view: view)), title: view_label(view), class: "btn btn-default view-type-#{ view.to_s.parameterize } #{"active" if document_index_view_type == view}" do %>
+          <%= render_view_type_group_icon view %>
+          <span class="caption"><%= view_label(view) %></span>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
-</div>
-<% end -%>
+  <% end -%>
+<% end %>
