--- a/app/views/press_catalog/index.html.erb
+++ b/app/views/press_catalog/index.html.erb
@@ -2,7 +2,7 @@
 <% provide :page_class, 'press' %>
 <div id="maincontent">
   <h2>Books</h2>
-  <div class="col-sm-3">
+  <div class="col-sm-3 facets-container">
     <%= render 'catalog/search_sidebar' %>
   </div>
   <div class="col-sm-9">
