--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -188,6 +188,7 @@ footer.press {
   // Gallery View (Default)
   .results-container {
     padding-left: 3em;
+    margin-top: -2.75em;
 
     #sortAndPerPage, .pagination-search-widgets {
       border-bottom: none;
@@ -204,13 +205,14 @@ footer.press {
       border-bottom: none;
       margin-top: 0px;
       padding-top: 0px;
+      padding-bottom: 3em;
 
       .thumbnail {
         text-align: left;
         border: none;
         border-radius: 0px;
         padding: 0px;
-        margin-bottom: 1.5em;
+        margin-bottom: 0px;
 
         a > img {
           margin-left: 0;
