--- a/app/views/press_catalog/index.html.erb
+++ b/app/views/press_catalog/index.html.erb
@@ -5,7 +5,7 @@
   <div class="col-sm-3 facets-container">
     <%= render 'catalog/search_sidebar' %>
   </div>
-  <div class="col-sm-9">
+  <div class="col-sm-9 results-container">
     <%= render 'catalog/search_results' %>
   </div>
 </div>
