enlarge read button; add read chapter button next to download button, lighten color for HEB

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -407,7 +407,7 @@ footer.press {
     }
 
     .download {
-      display: block;
+      display: inline-block;
       padding-left: 2em;
       padding-top: .4em;
     }
