--- a/app/views/e_pubs/access.html.erb
+++ b/app/views/e_pubs/access.html.erb
@@ -66,9 +66,9 @@
                          hyrax_file_set_url(@presenter.id)
                        end.gsub!(/\?locale=.*/, '')
             %>
-            idSelectUIParms.defaultReturn = '<%= URI.join(root_url, 'Shibboleth.sso/', 'Login') %>?target=<%= target %>';
-            idSelectUIParms.myEntityID = '<%= Rails.configuration.shibboleth_identity_provider_url %>';
-            idSelectUIParms.preferredIdP = ['<%= Rails.configuration.shibboleth_identity_provider_url %>'];
+            idSelectUIParms.defaultReturn = '<%= shib_login_url %>';
+            idSelectUIParms.myEntityID = '<%= Settings.shibboleth.sp.entity_id %>';
+            idSelectUIParms.preferredIdP = ['<%= Settings.shibboleth.default_idp.entity_id %>'];
             idSelectUIParms.ignoreURLParams = true; // TODO: Figure out why this is needed, or what needs to be fixed to remove it.
             // idSelectUIParms.testGUI = true;
             (new IdPSelectUI()).draw(idSelectUIParms);
