AEIM-1405 - Embed target in shib login URL
There is apparently something going on with Turbolinks in production,
where there is a double request to shib_login (and then to
Shibboleth.sso/Login). The first one was getting the target correctly,
but the second was failing... So, we go back to embedding the target
into the shib_login URL and shuttle it through the whole process. This
is arguably more consistent, anyway.

--- a/app/views/e_pubs/access.html.erb
+++ b/app/views/e_pubs/access.html.erb
@@ -61,12 +61,12 @@
             idSelectUIParms.defaultLogoHeight = 16;
             <%
               target = if @monograph_presenter.present?
-                         monograph_catalog_url(@monograph_presenter.id)
+                         monograph_catalog_path(@monograph_presenter.id)
                        else
-                         hyrax_file_set_url(@presenter.id)
+                         hyrax_file_set_path(@presenter.id)
                        end.gsub!(/\?locale=.*/, '')
             %>
-            idSelectUIParms.defaultReturn = '<%= shib_login_url %>';
+            idSelectUIParms.defaultReturn = '<%= shib_login_url(target) %>';
             idSelectUIParms.myEntityID = '<%= Settings.shibboleth.sp.entity_id %>';
             idSelectUIParms.preferredIdP = ['<%= Settings.shibboleth.default_idp.entity_id %>'];
             idSelectUIParms.ignoreURLParams = true; // TODO: Figure out why this is needed, or what needs to be fixed to remove it.
