Resolves HELIO-2000: Request Shibboleth login via Michigan for login link.

--- a/app/views/e_pubs/access.html.erb
+++ b/app/views/e_pubs/access.html.erb
@@ -30,7 +30,7 @@
           <% else %>
             <p>If you have purchased individual access log in.</p>
             <p class="text-center">
-              <form action="<%= main_app.new_user_session_path %>">
+              <form action="<%= main_app.default_login_path %>">
                 <button type="submit" class="btn btn-default">Sign In</button>
               </form>
             </p>
