--- a/fulcrum/_includes/footer.html
+++ b/fulcrum/_includes/footer.html
@@ -61,7 +61,7 @@
       $('#sign-in').text("Log Out");
     }
     else {
-      $('#sign-in').prop("href", "/login")
+      $('#sign-in').prop("href", "/default_login")
       $('#sign-in').text("Log In");
     }
   </script>
